form validations added

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         Full-stack<br />Developer. <br />Passionate<br />& Creative.
       </h1>
       <p class="description">
-        Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, earlier at the beginning of my programming
-        journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am more
-        accomplished. I am a problem solver and my favorite <span class="keyword"><b>@stack</b></span> is <span
-          class="keyword"><b>Rails</b></span><span class="keyword">|</span><span class="keyword"><b>React
-            & Redux</b></span>. My <span class="keyword"><b>@mission</b></span> is to provide the
-        best <span class="keyword"><b>@technical skills</b></span class="keyword"> and the best <span
+        Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, I am passionate about new technologies and
+        business grow.</span> Graduate in economics, I am a problem solver and my favorite <span
+          class="keyword"><b>@stack</b></span> is <span class="keyword"><b>Rails</b></span><span
+          class="keyword">|</span><span class="keyword"><b>React
+            & Redux</b></span>. My <span class="keyword"><b>@mission</b></span> is to provide <span
+          class="keyword"><b>@technical skills</b></span class="keyword"> and the best <span
           class="keyword"><b>@attitude</b></span> that any company could need.<br />
         Follow my work and words below.
       </p>
@@ -70,7 +70,8 @@
 
       <div class="project-desc pl-md-3">
         <h4 class="project-name pt-1">Wotchd</h4>
-        <p class="m-0">Wotchd is an app that helps you to track and collect your hours spent on watching your entertainment TV
+        <p class="m-0">Wotchd is an app that helps you to track and collect your hours spent on watching your
+          entertainment TV
           Shows. It is developed entirely with <b>Ruby on Rails</b> using a custum
           Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
           <b>Bootstrap 4</b> for the
@@ -144,7 +145,7 @@
     </section>
 
     <section class="articles p-md-5">
-      <h4 class="articles font-weight-bold mb-4">ARTICLES</h4>
+      <h4 class="articles font-weight-bold mb-1">ARTICLES</h4>
       <hr>
       <small class="article_date d-block">20/05/2020</small>
       <a href="https://hackernoon.com/css-basics-how-to-take-a-control-gm6k3vxd" class="article_title text-black"
@@ -156,21 +157,30 @@
       <div id="contact" class="p-4 p-md-5">
         <h4 class="font-weight-bold mb-4">GET IN TOUCH</h4>
 
-        <form class="mb-2">
+        <form class="form mb-2" id="form">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Name" id="name" aria-describedby="namelHelp">
+            <i class="fa fa-check-circle"></i>
+            <i class="fa fa-exclamation-circle"></i>
+            <small>Error message</small>
           </div>
 
           <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1"
+            <input type="email" class="form-control" placeholder="Email" id="email"
               aria-describedby="emailHelp">
+            <i class="fa fa-check-circle"></i>
+            <i class="fa fa-exclamation-circle"></i>
+            <small>Error message</small>
           </div>
 
           <div class="form-group">
-            <textarea class="form-control" placeholder="Message" id="exampleFormControlTextarea1" rows="4"></textarea>
+            <textarea class="form-control" placeholder="Message" id="comment" rows="4"></textarea>
+            <i class="fa fa-check-circle"></i>
+            <i class="fa fa-exclamation-circle"></i>
+            <small>Error message</small>
           </div>
 
-          <button type="submit" class="hello-btn border-0 m-0">Send</button>
+          <button type="submit" class="hello-btn w-100 border-0 mt-3">Send</button>
         </form>
       </div>
 
@@ -182,6 +192,7 @@
     </footer>
   </aside>
 
+  <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
