--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p class="m-0">Wotchd is an app that helps you to track and collect your hours spent on watching your
           entertainment TV
           Shows. It is developed entirely with <b>Ruby on Rails</b> using a custum
-          Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
+          Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage, <b>PostgreSQL</b> for the database and
           <b>Bootstrap 4</b> for the
           UI.</p>
         <div class="project-links">
