--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         <p class="m-0">Wotchd is an app that helps you to track and collect your hours spent on watching your
           entertainment TV
           Shows. It is developed entirely with <b>Ruby on Rails</b> using a custum
-          Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage, <b>PostgreSQL</b> for the database and
+          Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
+          <b>PostgreSQL</b> for the database and
           <b>Bootstrap 4</b> for the
           UI.</p>
         <div class="project-links">
@@ -84,24 +85,25 @@
       </div>
     </section>
 
-    <section class="project-mac d-md-flex red-sec align-items-center">
+    <section class="project-mac d-md-flex gold-sec align-items-center">
       <div class="image">
         <small class="order d-block">.002</small>
-        <img src="assets/images/mapaan.png" alt="" class="img-fluid" />
+        <img src="assets/images/weather-mockup.png" alt="" class="img-fluid" />
       </div>
-
+    
       <div class="project-desc">
-        <h4 class="project-name">Mapaan</h4>
-        <p class="m-0">Mapaan is an online tool that allows people to find their favorite event that they can attend.It
-          is
-          developed with <b>HTML5</b> and <b>CSS</b>.</p>
+        <h4 class="project-name">Weather App</h4>
+        <p class="m-0">A weather app that gives temperature and more data for a specific town by fetching data from an
+          <b>API (the OpenweatherApi)</b>. Built with <b>Javascript</b>
+        </p>
         <div class="project-links">
-          <a href="https://mapaan.netlify.com" class="live" target="blank">Demo</a>
+          <a href="https://steph-care.com" class="live" target="blank">Demo</a>
           <span>|</span>
-          <a href="https://github.com/EricMbouwe/Mapaan" class="github" target="blank">Github</a>
+          <a href="https://github.com/EricMbouwe/Weather-app-JS" target="blank" class="github">Github</a>
         </div>
       </div>
     </section>
+
 
     <section class="project-mac d-md-flex grey-sec align-items-center">
       <div class="image">
@@ -126,9 +128,28 @@
       </div>
     </section>
 
-    <section class="project-mac d-md-flex green-sec align-items-center">
+    <section class="project-mac d-md-flex red-sec align-items-center">
       <div class="image">
         <small class="order d-block">.004</small>
+        <img src="assets/images/mapaan.png" alt="" class="img-fluid" />
+      </div>
+    
+      <div class="project-desc">
+        <h4 class="project-name">Mapaan</h4>
+        <p class="m-0">Mapaan is an online tool that allows people to find their favorite event that they can attend.It
+          is
+          developed with <b>HTML5</b> and <b>CSS</b>.</p>
+        <div class="project-links">
+          <a href="https://mapaan.netlify.com" class="live" target="blank">Demo</a>
+          <span>|</span>
+          <a href="https://github.com/EricMbouwe/Mapaan" class="github" target="blank">Github</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="project-mac d-md-flex test align-items-center">
+      <div class="image">
+        <small class="order d-block">.005</small>
         <img src="assets/images/newsweek.png" alt="" class="img-fluid" />
       </div>
 
@@ -166,8 +187,7 @@
           </div>
 
           <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" id="email"
-              aria-describedby="emailHelp">
+            <input type="email" class="form-control" placeholder="Email" id="email" aria-describedby="emailHelp">
             <i class="fa fa-check-circle"></i>
             <i class="fa fa-exclamation-circle"></i>
             <small>Error message</small>
