--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div id="contact" class="p-4 p-md-5">
         <h4 class="font-weight-bold mb-4">GET IN TOUCH</h4>
 
-        <form class="form mb-2" id="form">
+        <form name="contact" method="POST" data-netlify="true" class="form mb-2" id="form">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Name" id="name" aria-describedby="namelHelp">
             <i class="fa fa-check-circle"></i>
