--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           </li>
         </ul>
       </div>
+
+      <!-- <div id="google_translate_element">change language</div> -->
+
       <a class="hello-btn d-block" href="mailto:ericmbouwe@gmail.com" target="blank">Get in Touch!</a>
     </div>
   </main>
@@ -65,7 +68,7 @@
     <section class="project-mobile blue-sec d-md-flex align-items-center">
       <div class="image d-flex flex-column">
         <small class="order d-block">.001</small>
-        <img src="assets/images/wotchd3.png" alt="" class="img-fluid" />
+        <img src="assets/images/wotchd3.png" alt="" />
       </div>
 
       <div class="project-desc pl-md-3">
@@ -211,6 +214,15 @@
 
     </footer>
   </aside>
+
+  <!-- <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+    }
+  </script>
+
+  <script type="text/javascript"
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
   <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
