--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
       </h1>
       <p class="description">
         Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, I am passionate about new technologies and
-        business grow.</span> Graduate in economics, I am a problem solver and my favorite <span
+        business growth.</span> Graduate in economics, I am a problem solver and my favorite <span
           class="keyword"><b>@stack</b></span> is <span class="keyword"><b>Rails</b></span><span
           class="keyword">|</span><span class="keyword"><b>React
-            & Redux</b></span>. My <span class="keyword"><b>@mission</b></span> is to provide <span
-          class="keyword"><b>@technical skills</b></span class="keyword"> and the best <span
-          class="keyword"><b>@attitude</b></span> that any company could need.<br />
-        Follow my work and words below.
+            & Redux</b></span>. My <span class="keyword"><b>@mission</b></span> is to participate in <span
+          class="keyword"><b>@innovation</b></span class="keyword"> and building great projects.<br />
+        Follow my work below.
       </p>
 
       <div class="social-links">
@@ -73,7 +72,7 @@
 
       <div class="project-desc pl-md-3">
         <h4 class="project-name pt-1">Wotchd</h4>
-        <p class="m-0">Wotchd is an app that helps you to track and collect your hours spent on watching your
+        <p class="m-0">WOTCHD is an app that helps you to track and collect your hours spent on watching your
           entertainment TV
           Shows. It is developed entirely with <b>Ruby on Rails</b> using a custum
           Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
@@ -209,7 +208,7 @@
 
       <div class="footer-bottom grey-sec text-white text-center p-3">
         <small>&copy;2020 Eric Mbouwe.</small>
-        <small><a href="https://icons8.com/icon/13930/linkedin" class="text-white">Design by Charlie Waite</a></small>
+        <small><a href="https://icons8.com/icon/13930/linkedin" class="text-white">Inspired by Charlie Waite</a></small>
       </div>
 
     </footer>
