cahned sizes of images

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="project-desc">
         <h4 class="project-name">Weather App</h4>
         <p class="m-0">A weather app that gives temperature and more data for a specific town by fetching data from an
-          <b>API (the OpenweatherApi)</b>. Built with <b>Javascript</b>
+          <b>API (The OpenweatherApi)</b>. Built with <b>Javascript</b>
         </p>
         <div class="project-links">
           <a href="https://steph-care.com" class="live" target="blank">Demo</a>
