--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           class="keyword">|</span><span class="keyword"><b>React
             & Redux</b></span>. My <span class="keyword"><b>@mission</b></span> is to participate in <span
           class="keyword"><b>@innovation</b></span class="keyword"> and building great projects.<br />
-        Follow my work below.
+        Follow my work below
       </p>
 
       <div class="social-links">
