--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="https://twitter.com/EricMbouwe" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </li>
           <li class="file">
-            <a href="assets/images/CV-Eric-En.pdf" data-toggle="tooltip" data-placement="top" title="Download resume"
+            <a href="assets/images/RESUME-ERIC-EN.pdf" data-toggle="tooltip" data-placement="top" title="Download resume"
               download><i class="fa fa-file-text" aria-hidden="true"></i></a>
           </li>
         </ul>
@@ -78,7 +78,8 @@
           Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
           <b>PostgreSQL</b> for the database and
           <b>Bootstrap 4</b> for the
-          UI.</p>
+          UI.
+        </p>
         <div class="project-links">
           <a href="https://wotchd.herokuapp.com" class="live" target="blank">Demo</a>
           <span>|</span>
@@ -90,18 +91,18 @@
     <section class="project-mac d-md-flex gold-sec align-items-center">
       <div class="image">
         <small class="order d-block">.002</small>
-        <img src="assets/images/weather-mockup.png" alt="" class="img-fluid" />
+        <img src="assets/images/cryptos.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc">
-        <h4 class="project-name">Weather App</h4>
-        <p class="m-0">A weather app that gives temperature and more data for a specific town by fetching data from an
-          <b>API (the OpenweatherApi)</b>. Built with <b>Javascript</b>
+        <h4 class="project-name">Cryptos</h4>
+        <p class="m-0">A catalog of crypto-currencies information.
+          <b>Crypto Market Cap & Pricing Data Provided By Nomics</b>. Built with <b>React</b> and <b>Redux</b>
         </p>
         <div class="project-links">
-          <a href="https://steph-care.com" class="live" target="blank">Demo</a>
+          <a href="https://react-cryptos.herokuapp.com/" class="live" target="blank">Demo</a>
           <span>|</span>
-          <a href="https://github.com/EricMbouwe/Weather-app-JS" target="blank" class="github">Github</a>
+          <a href="https://github.com/EricMbouwe/Cryptos" target="blank" class="github">Github</a>
         </div>
       </div>
     </section>
@@ -130,21 +131,25 @@
       </div>
     </section>
 
-    <section class="project-mac d-md-flex red-sec align-items-center">
+    <section class="project-mac d-md-flex green-sec align-items-center">
       <div class="image">
         <small class="order d-block">.004</small>
-        <img src="assets/images/mapaan.png" alt="" class="img-fluid" />
+        <img src="assets/images/zerofiltre.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc">
-        <h4 class="project-name">Mapaan</h4>
-        <p class="m-0">Mapaan is an online tool that allows people to find their favorite event that they can attend.It
-          is
-          developed with <b>HTML5</b> and <b>CSS</b>.</p>
+        <h4 class="project-name">Zerofiltre</h4>
+        <p class="m-0">Zerofiltre is a community of passionate engineers dedicated to various
+          software development
+          in the whole world.
+          Created in 2015, Zerofiltre was born on the initiative of Philippe SIMO, an entrepreneur engineer, and
+          architect
+          software specialized in JAVA. <br>
+          Built with <b>HTML5</b>, <b>CSS</b> and <b>javascript</b>.</p>
         <div class="project-links">
-          <a href="https://mapaan.netlify.com" class="live" target="blank">Demo</a>
+          <a href="https://www.zerofiltre.tech/" class="live" target="blank">Demo</a>
           <span>|</span>
-          <a href="https://github.com/EricMbouwe/Mapaan" class="github" target="blank">Github</a>
+          <a href="#" class="github" target="blank">Github</a>
         </div>
       </div>
     </section>
