fix the background overflow on mobile

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           Created in 2015, Zerofiltre was born on the initiative of Philippe SIMO, an entrepreneur engineer, and
           architect
           software specialized in JAVA. <br>
-          Built with <b>HTML5</b>, <b>CSS</b> and <b>javascript</b>.</p>
+          Built with <b>HTML5</b>, <b>CSS</b> and <b>Javascript</b>.</p>
         <div class="project-links">
           <a href="https://www.zerofiltre.tech/" class="live" target="blank">Demo</a>
           <span>|</span>
