change text Demo to Live

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           UI.
         </p>
         <div class="project-links">
-          <a href="https://wotchd.herokuapp.com" class="live" target="blank">Demo</a>
+          <a href="https://wotchd.herokuapp.com" class="live" target="blank">Live</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Wotchd" class="github" target="blank">Github</a>
         </div>
@@ -100,7 +100,7 @@
           <b>Crypto Market Cap & Pricing Data Provided By Nomics</b>. Built with <b>React</b> and <b>Redux</b>
         </p>
         <div class="project-links">
-          <a href="https://react-cryptos.herokuapp.com/" class="live" target="blank">Demo</a>
+          <a href="https://react-cryptos.herokuapp.com/" class="live" target="blank">Live</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Cryptos" target="blank" class="github">Github</a>
         </div>
@@ -147,7 +147,7 @@
           software specialized in JAVA. <br>
           Built with <b>HTML5</b>, <b>CSS</b> and <b>Javascript</b>.</p>
         <div class="project-links">
-          <a href="https://www.zerofiltre.tech/" class="live" target="blank">Demo</a>
+          <a href="https://www.zerofiltre.tech/" class="live" target="blank">Live</a>
           <span>|</span>
           <a href="#" class="github" target="blank">Github</a>
         </div>
@@ -165,7 +165,7 @@
         <p class="m-0">A clone of The Newsweek homepage build from scratch with <b>HTML & CSS</b> and <b>Bootstrap 4</b>
         </p>
         <div class="project-links">
-          <a href="https://newsweeks.netlify.app" class="live" target="blank">Demo</a>
+          <a href="https://newsweeks.netlify.app" class="live" target="blank">Live</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Newsweek-clone" target="blank" class="github">Github</a>
         </div>
