--- a/index.html
+++ b/index.html
@@ -72,19 +72,15 @@
       </div>
 
       <div class="project-desc pl-md-3">
-        <h4 class="project-name pt-1">Wotchd</h4>
-        <p class="m-0">WOTCHD is an app that helps you to track and collect your hours spent on watching your
-          entertainment TV
-          Shows. It is developed entirely with <b>Ruby on Rails</b> using a custum
-          Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
-          <b>PostgreSQL</b> for the database and
-          <b>Bootstrap 4</b> for the
-          UI.
+        <h4 class="project-name pt-1">DISNEY PLUS</h4>
+        <p class="m-0">DISNEY PLUS is an app that shows the best movies. 
+          It is developed entirely with <b>ReactJs</b> using Firebase
+          Authentication system, <b>Styled Component</b> for the UI.
         </p>
         <div class="project-links">
-          <a href="https://wotchd.herokuapp.com" class="live" target="blank">Live</a>
+          <a href="https://disney-plus-clone-dc9ac.firebaseapp.com/" class="live" target="blank">Live</a>
           <span>|</span>
-          <a href="https://github.com/EricMbouwe/Wotchd" class="github" target="blank">Github</a>
+          <a href="https://github.com/EricMbouwe/disney-plus-clone" class="github" target="blank">Github</a>
         </div>
       </div>
     </section>
@@ -116,18 +112,16 @@
       </div>
 
       <div class="project-desc pt-2">
-        <h4 class="project-name">Linter</h4>
-        <p class="m-0">A tool that will scan your code written in Ruby (.rb files) with a set of style rules and will
-          report any errors to you that
-          it find.
-          Build with <b>Ruby</b> and <b>RSpec</b> for tests.
+        <h4 class="project-name">HULU</h4>
+        <p class="m-0">An app which allow people to stream movies online
+          Build with <b>NextJS</b> and <b>Tailwind CSS</b> for the UI.
         </p>
 
         <div class="project-links">
-          <a href="https://github.com/EricMbouwe/Ruby-Linter/blob/development/README.md" class="live"
+          <a href="https://steph-care.com" class="live"
             target="blank">Demo</a>
           <span>|</span>
-          <a href="https://github.com/EricMbouwe/Ruby-Linter" class="github" target="blank">Github</a>
+          <a href="https://github.com/EricMbouwe/Hulu-clone" class="github" target="blank">Github</a>
         </div>
       </div>
     </section>
@@ -162,13 +156,14 @@
       </div>
 
       <div class="project-desc">
-        <h4 class="project-name">Newsweek</h4>
-        <p class="m-0">A clone of The Newsweek homepage build from scratch with <b>HTML & CSS</b> and <b>Bootstrap 4</b>
+        <h4 class="project-name">Muscle Cars</h4>
+        <p class="m-0">This app allow the user to book an appointment to test drive a muscle car.
+           It is build with <b>ReactJs</b> for the UI and <b>Ruby on Rails</b> for the backend.
         </p>
         <div class="project-links">
-          <a href="https://newsweeks.netlify.app" class="live" target="blank">Live</a>
+          <a href="https://musclecars-app.herokuapp.com/" class="live" target="blank">Live</a>
           <span>|</span>
-          <a href="https://github.com/EricMbouwe/Newsweek-clone" target="blank" class="github">Github</a>
+          <a href="https://github.com/EricMbouwe/musclecars-app" target="blank" class="github">Github</a>
         </div>
       </div>
     </section>
