--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <p class="description">
         Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, I am passionate about new technologies and
         business growth.</span> Graduate in economics, I am a problem solver and my favorite <span
-          class="keyword"><b>@stack</b></span> is <span class="keyword"><b>Rails</b></span><span
-          class="keyword">|</span><span class="keyword"><b>React
-            & Redux</b></span>. My <span class="keyword"><b>@mission</b></span> is to participate in <span
-          class="keyword"><b>@innovation</b></span class="keyword"> and building great projects.<br />
+          class="keyword"><b>@stack</b></span> is <span class="keyword"><b>React</b></span><span
+          class="keyword">|</span><span class="keyword"><b>Ruby on Rails</b></span>. 
+          I am enthusiastic and a good team player.
+        <br />
         Follow my work below
       </p>
 
@@ -85,29 +85,9 @@
       </div>
     </section>
 
-    <section class="project-mac d-md-flex gold-sec align-items-center">
-      <div class="image">
-        <small class="order d-block">.002</small>
-        <img src="assets/images/cryptos.png" alt="" class="img-fluid" />
-      </div>
-
-      <div class="project-desc">
-        <h4 class="project-name">Cryptos</h4>
-        <p class="m-0">A catalog of crypto-currencies information.
-          <b>Crypto Market Cap & Pricing Data Provided By Nomics</b>. Built with <b>React</b> and <b>Redux</b>
-        </p>
-        <div class="project-links">
-          <a href="https://react-cryptos.herokuapp.com/" class="live" target="blank">Live</a>
-          <span>|</span>
-          <a href="https://github.com/EricMbouwe/Cryptos" target="blank" class="github">Github</a>
-        </div>
-      </div>
-    </section>
-
-
     <section class="project-mac d-md-flex grey-sec align-items-center">
       <div class="image">
-        <small class="order d-block">.003</small>
+        <small class="order d-block">.002</small>
         <img src="assets/images/linter.png" alt="" class="img-fluid" />
       </div>
 
@@ -122,6 +102,25 @@
             target="blank">Demo</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Hulu-clone" class="github" target="blank">Github</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="project-mac d-md-flex test align-items-center">
+      <div class="image">
+        <small class="order d-block">.003</small>
+        <img src="assets/images/newsweek.png" alt="" class="img-fluid" />
+      </div>
+
+      <div class="project-desc">
+        <h4 class="project-name">Muscle Cars</h4>
+        <p class="m-0">This app allow the user to book an appointment to test drive a muscle car.
+           It is build with <b>ReactJs</b> for the UI and <b>Ruby on Rails</b> for the backend.
+        </p>
+        <div class="project-links">
+          <a href="https://musclecars-app.herokuapp.com/" class="live" target="blank">Live</a>
+          <span>|</span>
+          <a href="https://github.com/EricMbouwe/musclecars-app" target="blank" class="github">Github</a>
         </div>
       </div>
     </section>
@@ -149,21 +148,21 @@
       </div>
     </section>
 
-    <section class="project-mac d-md-flex test align-items-center">
+    <section class="project-mac d-md-flex gold-sec align-items-center">
       <div class="image">
         <small class="order d-block">.005</small>
-        <img src="assets/images/newsweek.png" alt="" class="img-fluid" />
+        <img src="assets/images/cryptos.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc">
-        <h4 class="project-name">Muscle Cars</h4>
-        <p class="m-0">This app allow the user to book an appointment to test drive a muscle car.
-           It is build with <b>ReactJs</b> for the UI and <b>Ruby on Rails</b> for the backend.
+        <h4 class="project-name">Cryptos</h4>
+        <p class="m-0">A catalog of crypto-currencies information.
+          <b>Crypto Market Cap & Pricing Data Provided By Nomics</b>. Built with <b>React</b> and <b>Redux</b>
         </p>
         <div class="project-links">
-          <a href="https://musclecars-app.herokuapp.com/" class="live" target="blank">Live</a>
+          <a href="https://react-cryptos.herokuapp.com/" class="live" target="blank">Live</a>
           <span>|</span>
-          <a href="https://github.com/EricMbouwe/musclecars-app" target="blank" class="github">Github</a>
+          <a href="https://github.com/EricMbouwe/Cryptos" target="blank" class="github">Github</a>
         </div>
       </div>
     </section>
