update text projects

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
       <div class="project-desc pl-md-3">
         <h4 class="project-name pt-1">DISNEY PLUS</h4>
-        <p class="m-0">DISNEY PLUS is an app that shows the best movies. 
+        <p class="m-0">DISNEY PLUS is the home for your favorite movies and TV shows from Disney, 
+          Pixar, Marvel, Star Wars, and National Geographic. 
           It is developed entirely with <b>ReactJs</b> using Firebase
           Authentication system, <b>Styled Component</b> for the UI.
         </p>
@@ -93,7 +94,8 @@
 
       <div class="project-desc pt-2">
         <h4 class="project-name">HULU</h4>
-        <p class="m-0">An app which allow people to stream movies online
+        <p class="m-0">Hulu is an online subscription video-on-demand platform that offers 
+          cinematic and audiovisual content.
           Build with <b>NextJS</b> and <b>Tailwind CSS</b> for the UI.
         </p>
 
@@ -114,7 +116,7 @@
 
       <div class="project-desc">
         <h4 class="project-name">Muscle Cars</h4>
-        <p class="m-0">This app allow the user to book an appointment to test drive a muscle car.
+        <p class="m-0">This app allows the user to book an appointment to test drive a muscle car.
            It is build with <b>ReactJs</b> for the UI and <b>Ruby on Rails</b> for the backend.
         </p>
         <div class="project-links">
@@ -156,7 +158,7 @@
 
       <div class="project-desc">
         <h4 class="project-name">Cryptos</h4>
-        <p class="m-0">A catalog of crypto-currencies information.
+        <p class="m-0">A catalog of information on cryptocurrencies.
           <b>Crypto Market Cap & Pricing Data Provided By Nomics</b>. Built with <b>React</b> and <b>Redux</b>
         </p>
         <div class="project-links">
