musclecar app link updated

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
            It is build with <b>ReactJs</b> for the UI and <b>Ruby on Rails</b> for the backend.
         </p>
         <div class="project-links">
-          <a href="https://musclecars-app.herokuapp.com/" class="live" target="blank">Live</a>
+          <a href="https://musclecarsapp.herokuapp.com/" class="live" target="blank">Live</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/musclecars-app" target="blank" class="github">Github</a>
         </div>
