--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="project-mobile blue-sec d-md-flex align-items-center">
       <div class="image d-flex flex-column">
         <small class="order d-block">.001</small>
-        <img src="assets/images/wotchd3.png" alt="" />
+        <img src="assets/images/disney-mockup.png" alt="" />
       </div>
 
       <div class="project-desc pl-md-3">
