--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
   </main>
 
   <aside>
-    <section class="project-mobile blue-sec d-md-flex align-items-center">
-      <div class="image d-flex flex-column">
+    <section class="project-mac d-md-flex blue-sec align-items-center">
+      <div class="image">
         <small class="order d-block">.001</small>
-        <img src="assets/images/disney-mockup.png" alt="" />
+        <img src="assets/images/disney-mockup.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc pl-md-3">
@@ -89,7 +89,7 @@
     <section class="project-mac d-md-flex grey-sec align-items-center">
       <div class="image">
         <small class="order d-block">.002</small>
-        <img src="assets/images/linter.png" alt="" class="img-fluid" />
+        <img src="assets/images/hulu-mockup.png " alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc pt-2">
@@ -111,13 +111,13 @@
     <section class="project-mac d-md-flex test align-items-center">
       <div class="image">
         <small class="order d-block">.003</small>
-        <img src="assets/images/newsweek.png" alt="" class="img-fluid" />
+        <img src="assets/images/muscle-mockup.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc">
         <h4 class="project-name">Muscle Cars</h4>
         <p class="m-0">This app allows the user to book an appointment to test drive a muscle car.
-           It is build with <b>ReactJs</b> for the UI and <b>Ruby on Rails</b> for the backend.
+           It is build with <b>ReactJs</b>, <b>Ruby on Rails</b> for the backend and <b>Tailwind CSS</b> for the UI.
         </p>
         <div class="project-links">
           <a href="https://musclecarsapp.herokuapp.com/" class="live" target="blank">Live</a>
