--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           Authentication system, <b>Styled Component</b> for the UI.
         </p>
         <div class="project-links">
-          <a href="https://disney-plus-clone-dc9ac.firebaseapp.com/" class="live" target="blank">Live</a>
+          <a href="https://disney-clone-d1e27.firebaseapp.com/" class="live" target="blank">Live</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/disney-plus-clone" class="github" target="blank">Github</a>
         </div>
