update bg gold color

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="project-links">
           <a href="https://www.zerofiltre.tech/" class="live" target="blank">Live</a>
           <span>|</span>
-          <a href="#" class="github" target="blank">Github</a>
+          <a href="https://github.com/zero-filtre/zerofiltre.tech" class="github" target="blank">Github</a>
         </div>
       </div>
     </section>
