add padding top tto project desc

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <img src="assets/images/hulu-mockup.png " alt="" class="img-fluid" />
       </div>
 
-      <div class="project-desc pt-2">
+      <div class="project-desc">
         <h4 class="project-name">HULU</h4>
         <p class="m-0">Hulu is an online subscription video-on-demand platform that offers 
           cinematic and audiovisual content.
