update blue color

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
     </section>
 
-    <section class="project-mac d-md-flex gold-sec align-items-center">
+    <section class="project-mac d-md-flex blue-sec align-items-center">
       <div class="image">
         <small class="order d-block">.005</small>
         <img src="assets/images/cryptos.png" alt="" class="img-fluid" />
