update some vocabulary

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h4 class="project-name">HULU</h4>
         <p class="m-0">Hulu is an online subscription video-on-demand platform that offers 
           cinematic and audiovisual content.
-          Build with <b>NextJS</b> and <b>Tailwind CSS</b> for the UI.
+          Built with <b>NextJS</b> and <b>Tailwind CSS</b> for the UI.
         </p>
 
         <div class="project-links">
