--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="project-links">
           <a href="https://steph-care.com" class="live"
-            target="blank">Demo</a>
+            target="blank">Live</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Hulu-clone" class="github" target="blank">Github</a>
         </div>
@@ -117,7 +117,7 @@
       <div class="project-desc">
         <h4 class="project-name">Muscle Cars</h4>
         <p class="m-0">This app allows the user to book an appointment to test drive a muscle car.
-           It is build with <b>ReactJs</b>, <b>Ruby on Rails</b> for the backend and <b>Tailwind CSS</b> for the UI.
+           It is built with <b>ReactJs</b>, <b>Ruby on Rails</b> for the backend and <b>Tailwind CSS</b> for the UI.
         </p>
         <div class="project-links">
           <a href="https://musclecarsapp.herokuapp.com/" class="live" target="blank">Live</a>
@@ -216,7 +216,7 @@
 
       <div class="footer-bottom grey-sec text-white text-center p-3">
         <small>&copy;2020 Eric Mbouwe.</small>
-        <small><a href="https://icons8.com/icon/13930/linkedin" class="text-white">Inspired by Charlie Waite</a></small>
+        <small><a href="https://icons8.com/icon/13930/linkedin" class="text-white">Design by Charlie Waite</a></small>
       </div>
 
     </footer>
