--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, I am passionate about new technologies and
         business growth.</span> Graduate in economics, I am a problem solver and my favorite <span
           class="keyword"><b>@stack</b></span> is <span class="keyword"><b>React</b></span><span
-          class="keyword">|</span><span class="keyword"><b>Ruby on Rails</b></span>. 
-          I am enthusiastic and a good team player.
+          class="keyword">|</span><span class="keyword"><b>Ruby on Rails</b></span>.
+        I am enthusiastic and a good team player.
         <br />
         Follow my work below
       </p>
@@ -73,8 +73,8 @@
 
       <div class="project-desc pl-md-3">
         <h4 class="project-name pt-1">DISNEY PLUS</h4>
-        <p class="m-0">DISNEY PLUS is the home for your favorite movies and TV shows from Disney, 
-          Pixar, Marvel, Star Wars, and National Geographic. 
+        <p class="m-0">DISNEY PLUS is the home for your favorite movies and TV shows from Disney,
+          Pixar, Marvel, Star Wars, and National Geographic.
           It is developed entirely with <b>ReactJs</b> using Firebase
           Authentication system, <b>Styled Component</b> for the UI.
         </p>
@@ -94,14 +94,13 @@
 
       <div class="project-desc">
         <h4 class="project-name">HULU</h4>
-        <p class="m-0">Hulu is an online subscription video-on-demand platform that offers 
+        <p class="m-0">Hulu is an online subscription video-on-demand platform that offers
           cinematic and audiovisual content.
           Built with <b>NextJS</b> and <b>Tailwind CSS</b> for the UI.
         </p>
 
         <div class="project-links">
-          <a href="https://steph-care.com" class="live"
-            target="blank">Live</a>
+          <a href="https://steph-care.com" class="live" target="blank">Live</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Hulu-clone" class="github" target="blank">Github</a>
         </div>
@@ -117,7 +116,7 @@
       <div class="project-desc">
         <h4 class="project-name">Muscle Cars</h4>
         <p class="m-0">This app allows the user to book an appointment to test drive a muscle car.
-           It is built with <b>ReactJs</b>, <b>Ruby on Rails</b> for the backend and <b>Tailwind CSS</b> for the UI.
+          It is built with <b>ReactJs</b>, <b>Ruby on Rails</b> for the backend and <b>Tailwind CSS</b> for the UI.
         </p>
         <div class="project-links">
           <a href="https://musclecarsapp.herokuapp.com/" class="live" target="blank">Live</a>
@@ -176,6 +175,52 @@
       <a href="https://hackernoon.com/css-basics-how-to-take-a-control-gm6k3vxd" class="article_title text-black"
         target="blank">CSS Basics: How To Take A Control</a>
       <hr>
+
+      <form action="https://www.paypal.com/donate" method="post" target="_top">
+        <input type="hidden" name="hosted_button_id" value="PG98WKYWNUXPC" />
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit"
+          title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+        <img alt="" border="0" src="https://www.paypal.com/en_CM/i/scr/pixel.gif" width="1" height="1" />
+      </form>
+
+      <div id="smart-button-container" class="mt-5">
+        <div style="text-align: left;">
+          <div id="paypal-button-container"></div>
+        </div>
+      </div>
+      <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=GBP"
+        data-sdk-integration-source="button-factory"></script>
+      <script>
+        function initPayPalButton() {
+          paypal.Buttons({
+            style: {
+              shape: 'rect',
+              color: 'gold',
+              layout: 'vertical',
+              label: 'paypal',
+
+            },
+
+            createOrder: function (data, actions) {
+              return actions.order.create({
+                purchase_units: [{ "description": "Booba&zaza movie", "amount": { "currency_code": "GBP", "value": 45 } }]
+              });
+            },
+
+            onApprove: function (data, actions) {
+              return actions.order.capture().then(function (details) {
+                alert('Transaction completed by ' + details.payer.name.given_name + '!');
+              });
+            },
+
+            onError: function (err) {
+              console.log(err);
+            }
+          }).render('#paypal-button-container');
+        }
+        initPayPalButton();
+      </script>
+
     </section>
 
     <footer>
@@ -222,14 +267,14 @@
     </footer>
   </aside>
 
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
     }
   </script>
 
   <script type="text/javascript"
-    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
