update disney description

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <h4 class="project-name pt-1">DISNEY PLUS</h4>
         <p class="m-0">DISNEY PLUS is the home for your favorite movies and TV shows from Disney,
           Pixar, Marvel, Star Wars, and National Geographic.
-          It is developed entirely with <b>ReactJs</b> using Firebase
-          Authentication system, <b>Styled Component</b> for the UI.
+          It is developed entirely with <b>ReactJs</b>, <b>Redux</b> using <b>Firebase
+          Authentication system</b>, and <b>Styled Component</b> for the UI styling.
         </p>
         <div class="project-links">
           <a href="https://disney-clone-d1e27.firebaseapp.com/" class="live" target="blank">Live</a>
