--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="project-desc">
         <h4 class="project-name">Muscle Cars</h4>
         <p class="m-0">This app allows the user to book an appointment to test drive a muscle car.
-          It is built with <b>ReactJs</b>, <b>Ruby on Rails</b> for the backend and <b>Tailwind CSS</b> for the UI.
+          It is built with <b>ReactJs</b>, <b>Redux</b>, <b>Ruby on Rails</b> for the backend and <b>Tailwind CSS</b> for the UI.
         </p>
         <div class="project-links">
           <a href="https://musclecarsapp.herokuapp.com/" class="live" target="blank">Live</a>
@@ -163,7 +163,7 @@
       <div class="project-desc">
         <h4 class="project-name">Cryptos</h4>
         <p class="m-0">A catalog of information on cryptocurrencies.
-          <b>Crypto Market Cap & Pricing Data Provided By Nomics</b>. Built with <b>React</b> and <b>Redux</b>
+          <b>Crypto Market Cap & Pricing Data Provided By Nomics</b>. Built with <b>React</b>, <b>SCSS</b> and <b>Redux</b>
         </p>
         <div class="project-links">
           <a href="https://react-cryptos.herokuapp.com/" class="live" target="blank">Live</a>
