--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <main class="">
     <div class="about-content">
       <h1 class="title font-weight-bold">
-        Full-stack<br />Developer. <br />Passionate<br />& Creative.
+        Full-Stack<br />Developer. <br />Passionate<br />& Creative.
       </h1>
       <p class="description">
         Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, I am passionate about new technologies and
